      (Alexander Belchenko, #69851)

    * Fix a bug causing a ValueError crash in ``parse_line_delta_iter`` when
      fetching revisions from a knit to pack repository or vice versa using
      bzr:// (including over http or ssh).
      (#208418, Andrew Bennetts, Martin Pool, Robert Collins)

    * Implement handling of basename parameter for DefaultMail.  (James Westby)

    * Launchpad locations (lp: URLs) can be pulled.  (Aaron Bentley, #181945)

    * Merges that add files to deleted root directories complete.  They
      do create conflicts.  (Aaron Bentley, #210092)

    * vsftp's return ``550 RNFR command failed.`` supported.
      (Marcus Trautwig, #129786)

  DOCUMENTATION:

    * Improved documentation on send/merge relationship. (Peter Schuller)

    * Minor fixes to the User Guide. (Matthew Fuller)

    * Reduced the evangelism in the User Guide. (Ian Clatworthy)

    * Added Integrating with Bazaar document for developers (Martin Albisetti)

  API BREAKS:

    * Attempting to pull data from a ghost aware repository (e.g. knits) into a
      non-ghost aware repository such as weaves will now fail if there are
      ghosts.  (Robert Collins)

    * ``KnitVersionedFile`` no longer accepts an ``access_mode`` parameter, and
      now requires the ``index`` and ``access_method`` parameters to be
      supplied. A compatible shim has been kept in the new function
      ``knit.make_file_knit``. (Robert Collins)

    * Log formatters must now provide log_revision instead of show and
      show_merge_revno methods. The latter had been deprecated since the 0.17
      release. (James Westby)

    * ``osutils.backup_file`` is removed. (Alexander Belchenko)

    * ``Repository.get_revision_graph`` is deprecated, with no replacement
      method. The method was size(history) and not desirable. (Robert Collins)

    * ``revision.revision_graph`` is deprecated, with no replacement function.
      The function was size(history) and not desirable. (Robert Collins)
